# django-challenge

./: .gitignore  pyproject.toml
docs/: DESCRIPTION.md  SETUP.md  STRUCTURE.md
ticket_selling_platform/: manage.py
ticket_selling_platform/matches/: models.py  views.py
ticket_selling_platform/matches/migrations/: 0001_initial.py
ticket_selling_platform/seats/: models.py  serializers.py  urls.py  views.py
ticket_selling_platform/seats/migrations/: 0001_initial.py
ticket_selling_platform/stadiums/: models.py  serializers.py  urls.py  views.py
ticket_selling_platform/stadiums/migrations/: 0001_initial.py
ticket_selling_platform/ticket_selling_platform/: asgi.py  settings.py  urls.py  wsgi.py
ticket_selling_platform/ticket_selling_platform/users/: models.py  views.py
ticket_selling_platform/ticketing/: exceptions.py  models.py  serializers.py  urls.py  views.py
ticket_selling_platform/ticketing/migrations/: 0001_initial.py
ticket_selling_platform/ticketing/utils/: bank_gateway.py  buy_ticket.py
ticket_selling_platform/users/: serializers.py  urls.py
ticket_selling_platform/users/migrations/: 0001_initial.py
